--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ plugins {
 
 group = 'com.neighbor'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '16'
+//sourceCompatibility = '16'
+sourceCompatibility = 1.8
 
 configurations {
     compileOnly {
@@ -27,6 +28,14 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     //MySQL connector.
     implementation("mysql:mysql-connector-java")
+
+// https://mvnrepository.com/artifact/com.graphql-java/graphql-spring-boot-starter
+    implementation group: 'com.graphql-java', name: 'graphql-spring-boot-starter', version: '5.0.2'
+    // https://mvnrepository.com/artifact/com.graphql-java/graphql-spring-boot-starter
+    implementation group: 'com.graphql-java', name: 'graphiql-spring-boot-starter', version: '5.0.2'
+
+// https://mvnrepository.com/artifact/com.graphql-java/graphql-java-tools
+    implementation group: 'com.graphql-java', name: 'graphql-java-tools', version: '5.2.4'
 //    runtimeOnly 'mysql:mysql-connector-java'
 }
 
