--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
 datasource:
   driverClassName: com.mysql.jdbc.Driver
-  url: jdbc:mysql://localhost:52000/test
-  username: neighbor_user
+  url: jdbc:mysql://localhost:3306/neighbor
+  username: neighbor_dev
   password: abcd1234
   jpa:
     hibernate.ddl-auto: update
