may have to redo authorization not working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.username=neighbor_dev
 spring.datasource.password=abcd1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+spring.security.oauth2.client.registration.neighbor.client-id = mike-app-webclient
+spring.security.oauth2.client.registration.neighbor.client-secret= mike-app-webclient
+spring.security.oauth2.client.registration.neighbor.client.scope= mike-app-webclient
