--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,17 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    developmentOnly("org.springframework.boot:spring-boot-devtools")
+    implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("org.springframework.boot:spring-boot-starter-security")
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+
+    // https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2
+    implementation group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.5.1.RELEASE'
+
+//    implementation 'org.springframework.boot:spring-boot-starter-web'
+
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'mysql:mysql-connector-java'
     annotationProcessor 'org.projectlombok:lombok'
@@ -28,6 +38,10 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     //MySQL connector.
     implementation("mysql:mysql-connector-java")
+
+    // Swagger REST API documentation and UI.
+    implementation("io.springfox:springfox-swagger2:2.5.0")
+    implementation("io.springfox:springfox-swagger-ui:2.5.0")
 
 }
 
