look into OAuth2Configuration last configure and second configure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,12 @@ spring.datasource.username=neighbor_dev
 spring.datasource.password=abcd1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-
-spring.security.oauth2.client.registration.neighbor.client-id = mike-app-webclient
-spring.security.oauth2.client.registration.neighbor.client-secret= mike-app-webclient
-spring.security.oauth2.client.registration.neighbor.client.scope= mike-app-webclient
+#spring.security.oauth2.client.registration.neighbor.client-id=neighbor
+#spring.security.oauth2.client.registration.neighbor.client-secret=neighbor
+#spring.security.oauth2.client.registration.neighbor.authorization-grant-type=client_credentials
+#spring.security.oauth2.client.registration.neighbor.redirect-uri=http://localhost:8080/oauth/token
+#spring.security.oauth2.client.registration.neighbor.client-id = mike-app-webclient
+#spring.security.oauth2.client.registration.neighbor.client-secret= mike-app-webclient
+#spring.security.oauth2.client.registration.neighbor.client.scope= mike-app-webclient
+#spring.security.user.name = neighbor
+#spring.security.user.password = neighbor
