--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  security:
+    user:
+      name: user
+      password: password
 datasource:
   driverClassName: com.mysql.jdbc.Driver
   url: jdbc:mysql://localhost:3306/neighbor
@@ -8,6 +12,17 @@ datasource:
     hibernate.ddl-auto: update
     generate-ddl: true
     show-sql: true
+#  {"web":{"client_id":"671078303051-0m0qfbfrs0nvuouleu75q7urr5sl7ci4.apps.googleusercontent.com",
+#"project_id":"bionic-flux-276819","auth_uri":"https://accounts.google.com/o/oauth2/auth",
+#"token_uri":"https://oauth2.googleapis.com/token","auth_provider_x509_cert_url":"https://www.googleapis.com/oauth2/v1/certs","client_secret":"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"}}
+#    spring:
+#      security:
+#        oauth2:
+#          client:
+#            registration:
+#              google:
+#                client-id: "671078303051-0m0qfbfrs0nvuouleu75q7urr5sl7ci4.apps.googleusercontent.com"
+#                client-secret: "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"
 #spring.datasource.url=jdbc:mysql://localhost:52000/neighbor
 #spring.datasource.username= neighbor_user
 #spring.datasource.password=
